Adding more details